[package]
name = "nitrokey-ci"
version = "0.1.0"
edition = "2021"

authors = ["Nitrokey GmbH <info@nitrokey.com>"]
description = "CI tooling for the Nitrokey repositories"
license = "Apache-2.0 or MIT"
repository = "https://github.com/Nitrokey/github-comment"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
octocrab = "0.35.0"
tokio = { version = "1.36.0", features = ["full"] }
